# libnut-core

./: .gitignore  .npmignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml  index.d.ts  index.js  package-lock.json  package.json  patch-packagename.js  permissionCheck.js
.build/: pre-release.ps1  pre-release.sh  release.ps1  release.sh
.github/workflows/: ci.yaml  snapshot_release.yaml  tagged_release.yaml
src/: Bitmap.cc  Bitmap.h  MMBitmap.c  MMBitmap.h  buffer_finalizer.h  deadbeef_rand.c  highlightwindow.h  highlightwindow_linux.c  highlightwindow_macos.m  highlightwindow_win32.c  keycode.h  keypress.c  keypress.h  libnut.cc  main.cc  mouse.c  mouse.h  os.h  screen.c  screen.cc  screen.h  screengrab.c  screengrab.h  startup.h  types.h  window.h  window_macos.mm  window_manager.h  window_win32.cc  xdisplay.c  xdisplay.h
src/linux/: highlightwindow.cc  keycode.c  keypress.c  keypress.cc  mouse.c  mouse.cc  screen.c  screen.cc  screengrab.cc  window_manager.cc  xdisplay.c  xdisplay.cc
src/macos/: highlightwindow.m  highlightwindow.mm  keycode.c  keycode.cc  keypress.c  keypress.cc  mouse.c  mouse.cc  mouse_utils.h  mouse_utils.mm  screen.c  screengrab.c  screengrab.cc  screengrab.m  window_manager.mm
src/win32/: highlightwindow.c  keycode.cc  keypress.c  keypress.cc  mouse.c  mouse.cc  screen.c  screengrab.c  screengrab.cc  window_manager.cc
test/: bitmap.js  keyboard.js  mouse.js  package-lock.json  package.json  screen.js
test/integration/: keyboard.js  mouse.js
test/window-integration-tests/: main.js  package-lock.json  package.json  second.html  second.js  test.js
